# sde

./: .coverage  .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .coveragerc  Dockerfile  README.md  pyproject.toml
backend/.venv~/: pyvenv.cfg
backend/app/: __init__.py  ai.py  auth.py  cache.py  config.py  database.py  dependencies.py  extractors.py  main.py  models.py  retrieval.py  schemas.py  services.py  storage.py  transcription.py  utils.py  vector_store.py
backend/mediamind_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_ai.py  test_api.py  test_auth.py  test_cache_and_vector.py  test_extractors.py  test_rate_limits.py  test_retrieval.py  test_services.py  test_transcription.py  test_utils_and_config.py
frontend/: .env  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
